# embassy-imxrt

./: Cargo.toml  ci.sh  deny.toml
.github/workflows/: cargo-vet.yml  check.yml  commit-list.yml  nostd.yml  rolling.yml
examples/rt633/: Cargo.toml  memory.x
examples/rt685s-evk/: Cargo.toml  memory.x
examples/rt685s-evk/src/: lib.rs
src/: adc.rs  clocks.rs  crc.rs  espi.rs  flexcomm.rs  flexspi_nor_storage_bus.rs  gpio.rs  lib.rs  pwm.rs  rng.rs  rtc.rs  time_driver.rs  timer.rs  uart.rs  wwdt.rs
src/flexspi/: mod.rs  nor.rs
src/hashcrypt/: mod.rs
src/i2c/: master.rs  mod.rs  slave.rs
src/time_driver/: mod.rs  ostimer.rs  rtc.rs
supply-chain/: README.md  audits.toml  config.toml
